# lit-critic

./: .gitignore  LICENSE  README.md  ROADMAP.md  SECURITY.md  lit-critic-web.py  lit-critic.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.githooks/: pre-push
cli/: __init__.py  __main__.py  commands.py  interface.py  session_loop.py
contracts/: __init__.py
contracts/v1/: __init__.py  adapters.py  schemas.py  wrappers.py
core/: Dockerfile  __init__.py  api.py  domain.py  ports.py  service.py
core/adapters/: __init__.py  legacy_runtime.py
docs/technical/: api-reference.md  architecture.md  installation.md  release-checklist.md  reliability-policy.md  security-remote-core.md  testing.md  versioning.md
docs/user-guide/: README.md  getting-started.md  index-files.md  knowledge-and-continuity.md  learning-system.md  scene-format.md  setting-up-your-project.md  sycophancy.md  tips-and-faq.md  (+4 more)
lit_platform/: __init__.py  context.py  core_client.py  facade.py  mappers.py  models.py  repo_preflight.py  session_state_machine.py  user_config.py
server/: __init__.py  api.py  config.py  db.py  discussion.py  learning.py  models.py  session.py  utils.py
tests/: __init__.py  conftest.py
versioning/: check_release_intent.py  compatibility.json  validate_semver.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
web/: __init__.py  __main__.py  app.py  route_helpers.py  routes.py  routes_analysis.py  routes_config.py  routes_management.py  routes_session.py  schemas.py  session_manager.py
(+226 files in other folders)
